Add SwaggerAPI example data and POST/PUT request Body examples
